# RedisClone

./: README.md  Redish.cabal
src/: Main  Main.hi  Main.hs
