name:                Redish
version:             0.1.0.0
synopsis:            Following along with Honza's "Building a Redis Clone"
description:         Please see README.md
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable Redish
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
